--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/img/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Somesankarit</title>
+    <title>SOMESANKARIT</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap");
     </style>
