Finish contact section and optimize some images

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/img/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000a0a" />
+    <meta name="color-scheme" content="dark" />
+    <meta
+      name="description"
+      content="Somesankarit - Your best social media agency!"
+    />
     <title>SOMESANKARIT</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap");
