Improve search result appearance

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <meta name="color-scheme" content="dark" />
     <meta
       name="description"
-      content="Somesankarit - Your best social media agency!"
+      content="Somesankarit is a leading social media agency in Finland. We help brands grow with creative content and data-driven strategies."
     />
-    <title>SOMESANKARIT</title>
+
+    <title>
+      Somesankarit – Boost Your Brand with a Top Finnish Social Media Agency
+    </title>
+
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&display=swap");
     </style>
