Updated description and title

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="color-scheme" content="dark" />
     <meta
       name="description"
-      content="Somesankarit is a leading social media agency in Finland. We help brands grow with creative content and data-driven strategies."
+      content="Me luomme aitoja ja rohkeita lyhytvideoita, jotka puhuvat brändisi puolesta. Tavoitamme oikeat ihmiset ja autamme rakentamaan luottamusta asiakkaiden ja brändisi välille."
     />
 
     <title>
-      Somesankarit – Boost Your Brand with a Top Finnish Social Media Agency
+      Somesankarit – Supervoima, joka tekee brändistäsi yleisön suosikin
     </title>
 
     <style>
